# flote

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.claude/: settings.json
.claude/commands/: add-feature.md  new-components.md  release.md  sync-types.md
.github/workflows/: release-android.yml  release-windows.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.css  App.module.css  App.tsx  QuickCapture.module.css  QuickCapture.tsx  config.ts  editorThemes.ts  main.tsx  mermaidThemes.ts  migrations.ts  previewRenderer.ts  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: capture.json  default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: .gitignore  app.json  metro.config.js  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/assets/: svg2roughjs-3.2.1.txt
apps/mobile/components/: CodeBlock.tsx  Dropdown.tsx  ExpenseSankey.tsx  ExpensesList.tsx  FloteLogo.tsx  MarkdownToolbar.tsx  MermaidChart.tsx  (+4 more)
docs/: privacy.md  setup.md  terms.md  win11.md
scripts/: release.sh
supabase/: config.toml
supabase/migrations/: 001_initial.sql  002_task_body_md.sql  003_enable_realtime.sql  004_rls_indexes_created_at.sql  005_note_type.sql  006_composite_indexes.sql  007_storage_bucket.sql  008_pinned_status.sql  009_delta_sync_and_io_cleanup.sql  add_transactions.sql
(+82 files in other folders)
